# sumgim

./: .gitignore  CHANGELOG.md  README.md  index.html  meeting-mode-PRD.md  package-lock.json  package.json  presentation.md  vite.config.ts
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
.omc/: project-memory.json
.omc/state/: agent-replay-e4e88ab2-e29b-4745-9843-bf1f3869e9ec.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
docs/: README.md  meeting-mode-PRD.md  workshop-plan.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.omc/state/: agent-replay-59c23009-ecda-42f2-be91-07214dcba78f.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  subagent-tracking.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  display_monitor.rs  dnd.rs  kakao_suspend.rs  lib.rs  main.rs  messenger.rs  shortcut.rs  state.rs  tray.rs  trigger_monitor.rs  window_hider.rs
src/lib/: api.ts
src/pages/: FloatingToggle.tsx  Onboarding.tsx  Settings.tsx
